--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        
+        <link rel="stylesheet" href="/css/style.css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
         <script type="text/javascript" src="/js/index.js"></script>
-        
     </head>
-    <body onload="getLocation()">
-        <div  id="result"></div>
+    <body>
+        <div  id="result" class="centered_div"></div>
     </body>
 </html>
