--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,6 +6,8 @@
         <script type="text/javascript" src="/js/index.js"></script>
     </head>
     <body>
-        <div  id="result" class="centered_div"></div>
+        <div id="curtain">
+            <div  id="result" class="centered_div"></div>
+        </div>
     </body>
 </html>
