--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 body{
     background-color: brown;
     background-attachment: fixed;
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    font-family: Montserrat, sans-serif;
 }
 .centered_div {
     position: absolute;
@@ -15,7 +18,44 @@ body{
     border-radius: 10%;
     padding: 2%;
     box-shadow: 5px 10px rgb(136 136 136 / 30%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 #icon{
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+#title{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+}
+#maxmin{
+    font-size: smaller;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+#city{
+    font-size: 2em;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+}
+#longname{
+    font-size: smaller;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+#weather{
+    font-weight: bold;
+    font-size: 1.5em;
+}
+#curtain{
+    display: none;
 }
